--- a/frontend/src/index.html
+++ b/frontend/src/index.html
@@ -26,6 +26,7 @@
   </script>
 
   <link href="build/main.css" rel="stylesheet">
+  <script src="golos.min.js"></script>
 
 </head>
 
@@ -45,8 +46,8 @@
   <!-- The bundle js is generated during the build process -->
   <script src="build/main.js"></script>
 
-  <!-- google maps script is loaded last as to not block rendering -->
-  <script async defer src="https://maps.googleapis.com/maps/api/js"></script>
+  
+  <script src="https://api-maps.yandex.ru/2.1/?lang=ru_RU" type="text/javascript"></script>
 
 </body>
 
