--- a/frontend/src/pages/about/about.html
+++ b/frontend/src/pages/about/about.html
@@ -17,6 +17,9 @@
   </div>
   <div padding class="about-info">
     <h4>Golos Wallet</h4>
+    <div>
+      this application needfull
+    </div>
 
   </div>
 </ion-content>
