--- a/frontend/src/pages/tutorial/tutorial.html
+++ b/frontend/src/pages/tutorial/tutorial.html
@@ -12,30 +12,60 @@
     <ion-slide>
       <img src="assets/img/ica-slidebox-img-1.png" class="slide-image"/>
       <h2 class="slide-title">
-        Welcome to <b>ICA</b>
+        Welcome to <b>Golos Wallet</b>
       </h2>
       <p>
-        The <b>ionic conference app</b> is a practical preview of the ionic framework in action, and a demonstration of proper code use.
+        This application allows you to make direct transactions of "Golos" in real money.
       </p>
     </ion-slide>
 
     <ion-slide>
       <img src="assets/img/ica-slidebox-img-2.png" class="slide-image"/>
-      <h2 class="slide-title" >What is Ionic?</h2>
-      <p><b>Ionic Framework</b> is an open source SDK that enables developers to build high quality mobile apps with web technologies like HTML, CSS, and JavaScript.</p>
+      <h2 class="slide-title" >What can you do with it?</h2>
+      <p><b>Golos Wallet</b> will help you to find those who need to sell Golos or those who want to buy Golos</p>
     </ion-slide>
 
     <ion-slide>
       <img src="assets/img/ica-slidebox-img-3.png" class="slide-image"/>
-      <h2 class="slide-title">What is Ionic Pro?</h2>
-      <p><b>Ionic Pro</b> is a powerful set of services and features built on top of Ionic Framework that brings a totally new level of app development agility to mobile dev teams.</p>
+      <h2 class="slide-title">First step</h2>
+      <p>вот че там насчет логина. !!!!!!!ААААААААААААААААА</p>
+    </ion-slide>
+
+    <ion-slide>
+      <img src="assets/img/transaction.png" class="slide-image"/>
+      <h2 class="slide-title">How to make a transaction?</h2>
+      //<p>You need to enter your login, password from the account Golos.</p>
+    </ion-slide>
+
+        <ion-slide>
+      <img src="assets/img/transac1.png" class="slide-image"/>
+//      <h2 class="slide-title">How to make a transaction?</h2>
+      <p>You need to enter your login, password from the account Golos.</p>
+    </ion-slide>
+
+    <ion-slide>
+      <img src="assets/img/transac2.png" class="slide-image"/>
+ //     <h2 class="slide-title">How to make a transaction?</h2>
+      <p>Enter the recipient's login.</p>
+    </ion-slide>
+
+    <ion-slide>
+      <img src="assets/img/transac3.png" class="slide-image"/>
+  //    <h2 class="slide-title">How to make a transaction?</h2>
+      <p>Enter the transfer amount.</p>
+      <p>If you want you can type a comment</p>
+    </ion-slide>
+
+    <ion-slide>
+      <h2 class="slide-title">And press</h2>
+      <img src="assets/img/transac4.png" class="slide-image"/>
     </ion-slide>
 
     <ion-slide>
       <img src="assets/img/ica-slidebox-img-4.png" class="slide-image"/>
-      <h2 class="slide-title">Ready to Play?</h2>
+      <h2 class="slide-title">Let's try?</h2>
       <button ion-button icon-end large clear (click)="startApp()">
-        Continue
+        Start
         <ion-icon name="arrow-forward"></ion-icon>
       </button>
     </ion-slide>
