--- a/frontend/src/pages/home/home.html
+++ b/frontend/src/pages/home/home.html
@@ -8,5 +8,5 @@
 
 
 <ion-content padding>
-	<button ion-button (click)=test()>auth</button>
+	<button ion-button (click)=test()>do something</button>
 </ion-content>
