--- a/frontend/src/pages/login-screen/login-screen.html
+++ b/frontend/src/pages/login-screen/login-screen.html
@@ -1,4 +1,4 @@
 <ion-content padding>
 	<button ion-button (click)=loggining()>Loggin</button>
-	<button ion-button (click)=signup()>Sign Up</button>
+	<a href="https://golos.io/create_account" target="_blank"><button ion-button>Sign Up</button></a>
 </ion-content>
