--- a/frontend/src/index.html
+++ b/frontend/src/index.html
@@ -35,6 +35,7 @@
   <!-- Ionic's root component and where the app will load -->
   <ion-app></ion-app>
 
+  <script async defer src="https://maps.googleapis.com/maps/api/js"></script>
   <script src="cordova.js"></script>
 
   <!-- The polyfills js is generated during the build process -->
@@ -47,7 +48,6 @@
   <script src="build/main.js"></script>
 
   
-  <script src="https://api-maps.yandex.ru/2.1/?lang=ru_RU" type="text/javascript"></script>
 
 </body>
 
