--- a/frontend/src/pages/logining/logining.html
+++ b/frontend/src/pages/logining/logining.html
@@ -21,4 +21,5 @@
 	</ion-list>
 
 	<button ion-button (click)=doLogin()>Login!</button>
+	<button ion-button (click)=doFake()>fake</button>
 </ion-content>
