--- a/frontend/src/pages/map/map.html
+++ b/frontend/src/pages/map/map.html
@@ -4,6 +4,7 @@
       <ion-icon name="menu"></ion-icon>
     </button>
     <ion-title>Map</ion-title>
+  <ion-toggle  checked="false" color="secondary" [(ngModel)]="userData.isSeller" (click)=showConfirm()></ion-toggle>
   </ion-navbar>
 </ion-header>
 
