--- a/frontend/src/pages/about/about.html
+++ b/frontend/src/pages/about/about.html
@@ -17,6 +17,9 @@
   </div>
   <div padding class="about-info">
     <h4>Golos Wallet</h4>
-
+    <p>
+      Mobile client for blockchain system GOLOS.<br>
+      This application developed for cashing crypto coins
+    </p>
   </div>
 </ion-content>
