--- a/frontend/src/pages/map1/map.html
+++ b/frontend/src/pages/map1/map.html
@@ -4,7 +4,7 @@
       <ion-icon name="menu"></ion-icon>
     </button>
     <ion-title>Map</ion-title>
-  <ion-toggle  checked="false" color="secondary" [(ngModel)]="userData.isSeller" (click)=showConfirm()></ion-toggle>
+  <!--<ion-toggle style="position: absolute; right: 10px;top: 10px" checked="false" color="secondary" [(ngModel)]="userData.isSeller" (click)=showConfirm()></ion-toggle>-->
   </ion-navbar>
 </ion-header>
 
