--- a/frontend/src/pages/tabs-page/tabs-page.html
+++ b/frontend/src/pages/tabs-page/tabs-page.html
@@ -1,6 +1,6 @@
 <ion-tabs [selectedIndex]="mySelectedIndex" name="conference">
-  <ion-tab [root]="tab1Root" tabTitle="Map1" tabIcon="map" tabUrlPath="conference-schedule"></ion-tab>
-  <ion-tab [root]="tab2Root" tabTitle="Home" tabIcon="contacts"></ion-tab>
-  <ion-tab [root]="tab3Root" tabTitle="Map" tabIcon="map"></ion-tab>
+  <ion-tab [root]="tab1Root" tabTitle="Home" tabIcon="map" tabUrlPath="conference-schedule"></ion-tab>
+  <ion-tab [root]="tab2Root" tabTitle="Transaction" tabIcon="contacts"></ion-tab>
+  <ion-tab [root]="tab3Root" tabTitle="Seller" tabIcon="map"></ion-tab>
   <ion-tab [root]="tab4Root" tabTitle="About" tabIcon="information-circle"></ion-tab>
 </ion-tabs>
